@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -28,7 +28,7 @@ my %WriteMakefileArgs = (
     "Path::Tiny" => 0,
     "Test::DZil" => 0,
     "Test::Differences" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::Requires" => 0
   },
   "VERSION" => "0.006003",
@@ -48,7 +48,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => 0,
   "Test::DZil" => 0,
   "Test::Differences" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::Requires" => 0
 );
 
